--- a/src/components/EventCard/EventCard.module.css
+++ b/src/components/EventCard/EventCard.module.css
@@ -35,6 +35,11 @@
 	background-color: #000;
 	color: #fff;
 }
+.icon {
+	display: block;
+	margin-right: 8px;
+	color: #000;
+}
 
 .free {
 	background-color: green;
